--- a/src/componentes/header/Header.css
+++ b/src/componentes/header/Header.css
@@ -1,5 +1,5 @@
 header{
-    background-color: #f28ddc;
+    background-color: #bc87b0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,18 +14,22 @@ header{
     justify-content:flex-end;
     list-style:none; 
   }
+  .navbar a:hover{
+    color: rgb(250, 250, 250);
+
+  }
   img{
     width:100px;
   }
   .S{
-    border:solid;
     border-radius:5px;
-    color:#f0389a;
-    border:double #f0389a;
+    color:rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
     margin-left: 30px;
     font-size:25px;
     text-decoration:none;
+    padding: 2px;
   }
-  
+
   
   
