--- a/src/componentes/projetos/Projetos.css
+++ b/src/componentes/projetos/Projetos.css
@@ -12,7 +12,7 @@
 }
 .barrapesquisa{
     height: 30px;
-    border: 1px solid #bebebe;
+    border: 1px solid #070707;
     width: 300px;
     border-radius: 5px;
     font-size: 1.4rem;
