--- a/src/componentes/main/Main.css
+++ b/src/componentes/main/Main.css
@@ -4,7 +4,7 @@ body{
 .foto{
     display: flex;
     width: 500px;
-    border-radius: 500px;
+    border-radius: 47%;
     background-color:  rgb(246, 194, 202);
     top: 80px;
     margin: 0 auto;
