--- a/src/componentes/projeto/Projeto.css
+++ b/src/componentes/projeto/Projeto.css
@@ -1,8 +1,14 @@
 .filme_content{
     /* width: 300px; */
     padding: 50px;
-    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 10px 4px rgba(255, 0, 0, 0.1);
     overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+.filme_content h1{
+ color: black;
+font-size: 25px;
 }
 .foto_filme{
     min-height: 350px;
