--- a/src/componentes/header/Header.css
+++ b/src/componentes/header/Header.css
@@ -1,35 +1,26 @@
 header{
     background-color: #bc87b0;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-  }
-  .logo1{
+    padding: 20px 10vw;
+    align-items: center;
+}
 
-    width: 200px;
-  }
-  .navbar{
-    justify-content:space-between;
-    display:flex;
-    justify-content:flex-end;
-    list-style:none; 
-  }
-  .navbar a:hover{
-    color: rgb(250, 250, 250);
-
-  }
-  img{
-    width:100px;
-  }
-  .S{
-    border-radius:5px;
-    color:rgb(0, 0, 0);
-    border: 2px solid rgb(0, 0, 0);
-    margin-left: 30px;
-    font-size:25px;
-    text-decoration:none;
-    padding: 2px;
-  }
-
-  
-  
+header nav ul li a{
+    text-decoration: none;
+    padding: 15px;
+    border: 1px solid rgb(0, 0, 0);
+    color: white;
+}
+header nav ul{
+    display: flex;
+    list-style: none;
+    gap: 15px;
+    align-items: center;
+}
+img{
+  width:250px;
+}
+.navbar a:hover{
+  color: rgb(250, 250, 250);
+}
