--- a/src/componentes/projeto/Projeto.css
+++ b/src/componentes/projeto/Projeto.css
@@ -6,6 +6,11 @@
     font-family: Arial, Helvetica, sans-serif
 }
 
+.filme_content:hover{
+    box-shadow: 0px 0px 10px 4px rgba(0, 200, 255, 0.1);
+   
+}
+
 .filme_content h1{
  color: black;
 font-size: 25px;
