--- a/src/componentes/projetos/Projetos.css
+++ b/src/componentes/projetos/Projetos.css
@@ -10,6 +10,7 @@
     flex-wrap: wrap;
     justify-content: center; */
 }
+
 .barrapesquisa{
     height: 30px;
     border: 1px solid #070707;
@@ -18,7 +19,7 @@
     font-size: 1.4rem;
 }
 .barrapesquisa:focus-visible{
-    outline: 1px solid rgba(28, 28, 191, 0.57);
+    outline: 1px solid rgb(201, 45, 45);
 }
 .pesquisa{
     padding: 50px;
